Updated all XML, HTML files. Updated XSL files. Updated JS file. Updated CSS file.

--- a/21r.html
+++ b/21r.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/mirador@latest/dist/mirador.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
-    <title>Frankenstein Edition</title>
+    <title>Frankenstein - Page 21, Recto</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
@@ -41,6 +41,12 @@
             </div>
           </li>
         </ul>
+      </div>
+      <div class='d-flex justify-content-between mt-4'>
+        <a href='index.html' class='btn btn-secondary'>Back to Home</a>
+        <div>
+          <a href='21v.html' class='btn btn-primary'>Next Page</a>
+        </div>
       </div>
     </nav>
     <div class="container-fluid">
