--- a/25r.html
+++ b/25r.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/mirador@latest/dist/mirador.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
-    <title>Frankenstein Edition</title>
+    <title>Frankenstein - Page 25, Recto</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
@@ -41,6 +41,10 @@
             </div>
           </li>
         </ul>
+      </div>
+      <div class='d-flex justify-content-between mt-4'>
+        <a href='24v.html' class='btn btn-primary'>Previous Page</a>
+        <a href='25v.html' class='btn btn-primary'>Next Page</a>
       </div>
     </nav>
     <div class="container-fluid">
