--- a/index.html
+++ b/index.html
@@ -48,18 +48,38 @@
       
       <div class="row">
         <div class="col-5">   
-            <p>Welcome to the mini digital edition of Mary Shelley's <i>Frankenstein</i>. Made as a project for Text as Data II, taught at the University of Antwerp.</p>
-          <p>Give here some context about the manuscript and the assignment by writing directly into the html, for example:</p>
+            <p>Welcome to the mini digital edition of Mary Shelley's <i>Frankenstein</i>. Made as a project for Text as Data, taught at the University of Antwerp.</p>
+          <p></p>
           <ul>
-            <li>A photograph of Mary Shelley and Percy Shelley;</li>
-            <li>A table/list with the pages in this digital edition;</li>
-            <li>A link to the Bodleian Library (https://www.bodleian.ox.ac.uk/home)</li>
-            <li>A link to the Shelley Godwin Archive, on which this digital edition was based (http://shelleygodwinarchive.org/)</li>
-            <li>Your name!</li>
-            <li>The licence, including link: (https://creativecommons.org/licenses/by-nc/4.0/) </li>
-            <li>A link to the encoding manual (https://bdmpmanual.uantwerpen.be/)</li>
+            <h2>Mary and Percy Shelley</h2>
+              <img src='Mary-and-Percy-Shelley.jpg' alt="Mary Shelley and Percy Shelley" class="img-fluid mb-3" style="max-height: 200px;">
+            <h2>Pages in this edition:</h2>
+              <ul>
+                <li><a href='21r.html'>21r</a></li>
+                <li><a href='21v.html'>21v</a></li>
+                <li><a href='22r.html'>22r</a></li>
+                <li><a href='22v.html'>22v</a></li>
+                <li><a href='23r.html'>23r</a></li>
+                <li><a href='23v.html'>23v</a></li>
+                <li><a href='24r.html'>24r</a></li>
+                <li><a href='24v.html'>24v</a></li>
+                <li><a href='25r.html'>25r</a></li>
+                <li><a href='25v.html'>25v</a></li>
+              </ul>
+            <h2>External Links:</h2>
+              <ul>
+              <li><a href="https://www.bodleian.ox.ac.uk/home" target="_blank">Bodleian Library</a></li>
+              <li><a href="http://shelleygodwinarchive.org/" target="_blank">Shelley Godwin Archive</a></li>
+              <li><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">Creative Commons License</a></li>
+              <li><a href="https://bdmpmanual.uantwerpen.be/" target="_blank">Encoding Manual</a></li>
+              </ul>
+
+            <h2>Author</h2>
+              <p>Created by Victor Van Moer</p>
+
+            
           </ul>
-          <p><b>Style all the pages the way you want by diving into the css file.</b></p>
+          <p><b></b></p>
         </div>
         <div class="col-7" id="text"></div>
       </div>
